src/Components/navbar/navbar.css
.Navbar {
  display: flex;
  list-style: none;
  margin: 20px;
  padding: 0;
  justify-content: space-between;
}

.Navbar__list {
  display: flex;
  list-style: none;
  margin: 0;
  padding: 0;
}

.Navbar__list-item {
  padding: 10px;
  font-size: 1.2rem;
}

.name {
  font-size: 1.2rem;
}

